--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "mocha --reporter spec"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jeroenransijn/expressful-content.git"
+  },
   "keywords": [
     "json",
     "cson",
